objects/EUR_TR_SKU__c.object
<CustomObject>
    <description>Is using by PR Turkey TT Project</description>
    <fields>
        <fullName>EUR_TR_BrandBountyOnTrade__c</fullName>
        <label>EUR_TR_BrandBountyOnTrade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_BrandBounty__c</fullName>
        <label>EUR_TR_BrandBounty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_BrandQualityGroup__c</fullName>
        <label>EUR_TR_BrandQualityGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_BrandQualitySize__c</fullName>
        <label>EUR_TR_BrandQualitySize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_BrandQuality__c</fullName>
        <label>EUR_TR_BrandQuality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Brand__c</fullName>
        <label>EUR_TR_Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Category__c</fullName>
        <label>EUR_TR_Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Predefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_DiscountGroup10__c</fullName>
        <label>EUR_TR_DiscountGroup10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_DiscountGroup2__c</fullName>
        <label>EUR_TR_DiscountGroup2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_HouseOfBrand__c</fullName>
        <label>EUR_TR_HouseOfBrand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ImageUrl__c</fullName>
        <label>EUR_TR_ImageUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Premium__c</fullName>
        <label>EUR_TR_Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Predefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_ReportingBrandQualityGroup__c</fullName>
        <label>EUR_TR_ReportingBrandQualityGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_SKUCode__c</fullName>
        <label>EUR_TR_SKUCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_SKUId__c</fullName>
        <externalId>true</externalId>
        <label>EUR_TR_SKUId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_TR_SetId__c</fullName>
        <label>EUR_TR_SetId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Status__c</fullName>
        <label>EUR_TR_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aktif</fullName>
                </value>
                <value>
                    <fullName>Pasif</fullName>
                </value>
                <value>
                    <fullName>Predefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_UltraPremium__c</fullName>
        <label>EUR_TR_UltraPremium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Predefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EUR TR SKU</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EUR_TR_SKUId__c</columns>
        <columns>EUR_TR_SKUCode__c</columns>
        <columns>NAME</columns>
        <columns>EUR_TR_Brand__c</columns>
        <columns>EUR_TR_BrandQuality__c</columns>
        <columns>EUR_TR_BrandQualitySize__c</columns>
        <columns>EUR_TR_HouseOfBrand__c</columns>
        <columns>EUR_TR_ImageUrl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_TR_Status__c</field>
            <operation>equals</operation>
            <value>Aktif</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Image_URLs</fullName>
        <columns>NAME</columns>
        <columns>EUR_TR_BrandQualitySize__c</columns>
        <columns>EUR_TR_ImageUrl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_TR_BrandQualitySize__c</field>
            <operation>contains</operation>
            <value>JAM</value>
        </filters>
        <label>Image URLs</label>
    </listViews>
    <nameField>
        <label>EUR_TR_SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EUR TR SKU</pluralLabel>
    <recordTypes>
        <fullName>EUR_TR_SKU</fullName>
        <active>true</active>
        <label>EUR_TR_SKU</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>